# slack-bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yaml  pyproject.toml
.github/worflows/: cicd.yaml
.github/workflows/: main.yml
modules/: functions.py
